# mrscan2

./: .gitignore  .gitmodules  CMakeLists.txt  Projects.lnk  abstractpreferencestab.cpp  abstractpreferencestab.h  appearanceconfig.cpp  appearanceconfig.h  appearancepreference.cpp  appearancepreference.h  appearancepreference.ui  configmanager.cpp  configmanager.h  custompreferences.cpp  custompreferences.h  debugconfig.cpp  debugconfig.h  debugpreference.cpp  debugpreference.h  debugpreference.ui  exam.cpp  exam.h  exameditdialog.cpp  exameditdialog.h  exameditdialog.ui  examhistory.cpp  examhistory.h  examinfodialog.cpp  examinfodialog.h  examinfodialog.ui  examitem.cpp  examitem.h  exammodel.cpp  exammodel.h  examresponse.h  examtab.cpp  examtab.h  examtab.ui  examtablemodel.cpp  examtablemodel.h  (+82 more)
components/: qcheckcombobox.cpp  qcheckcombobox.h  qcheckcombobox.md  qcheckcombobox.qrc
configs/: default_exams.json  exams.json  ids.json  preferences.json  sequences.json  tunings.json
